--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "json-server": "^0.17.0",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.5.3"
